recursion.cons.length.Length.scala.error
Compilation error:
Length:4: error: value head_= is not a member of List[Int]
  if(l.head = Nil)
       ^